Added Mike's feed and the official blog feed

--- a/test.ini
+++ b/test.ini
@@ -30,10 +30,16 @@ bill_of_materials:
 facewidth = 64
 faceheight = 64
 
-[http://cheesehead-techblog.blogspot.com/feeds/posts/default]
-name = Ian Weisser
-face = ian.png
+[http://ubuntu-wisconsin.org/blog/feed]
+name = Ubuntu US Wisconsin LoCo Team Blog
 
 [http://anthonyrhook.com/feed/]
 name = Anthony Hook
-face = anthony.png
+
+[http://theputnams.net/mike/feed]
+name = Mike Putnam
+face = mike.png
+
+[http://cheesehead-techblog.blogspot.com/feeds/posts/default]
+name = Ian Weisser
+face = ian.png
