Fixed Mike's face

--- a/test.ini
+++ b/test.ini
@@ -39,6 +39,8 @@ name = Anthony Hook
 [http://theputnams.net/mike/feed]
 name = Mike Putnam
 face = mike.png
+facewidth = 88
+faceheight = 63
 
 [http://cheesehead-techblog.blogspot.com/feeds/posts/default]
 name = Ian Weisser
