updated, but also on a new server and path thanks to teward

--- a/test.ini
+++ b/test.ini
@@ -13,7 +13,7 @@ feed_timeout = 60
 # output_dir: Directory to place output files
 # items_per_page: How many items to put on each page
 output_theme = classic_fancy
-output_dir = /home/ubuntu/workspace/
+output_dir = /srv/hosted/planet.ubuntu-wisconsin.org/
 items_per_page = 20
 
 # additional files to copy (note the wildcards!)
