--- a/test.ini
+++ b/test.ini
@@ -45,3 +45,6 @@ faceheight = 63
 [http://cheesehead-techblog.blogspot.com/feeds/posts/default]
 name = Ian Weisser
 face = ian.png
+
+[http://dark-net.net/?tag=ubuntu-wisconsin&feed=rss2]
+name = Thomas Ward (planet.ubuntu-wisconsin.org related)
