--- a/test.ini
+++ b/test.ini
@@ -47,4 +47,4 @@ name = Ian Weisser
 face = ian.png
 
 [http://dark-net.net/?tag=ubuntu-wisconsin&feed=rss2]
-name = Thomas Ward (planet.ubuntu-wisconsin.org related)
+name = planet.ubuntu-wisconsin.org System Announcements
