* Added Simon Quigley's blog

--- a/test.ini
+++ b/test.ini
@@ -48,3 +48,6 @@ face = ian.png
 
 [http://dark-net.net/?tag=ubuntu-wisconsin&feed=rss2]
 name = planet.ubuntu-wisconsin.org System Announcements
+
+[http://tsimonq2.net/blog/feed]
+name = Simon Quigley
