--- a/test.ini
+++ b/test.ini
@@ -51,3 +51,6 @@ name = planet.ubuntu-wisconsin.org System Announcements
 
 [http://tsimonq2.net/blog/feed]
 name = Simon Quigley
+
+[https://srukle.github.io/feed]
+name = Sam Klein
